# pcv80_recorder

./: CMakeLists.txt
form/: MainWindow.ui
src/: MainWindow.cpp  MainWindow.h  Measure.h  Pcv80.cpp  Pcv80.h  Rs485.cpp  Rs485.h  main.cpp
